k8s/alb.yml
apiVersion: v1
kind: Service  
metadata:
  name: face-crop-service
  namespace: my-namespace
spec:
  type: LoadBalancer
  selector:
    app: face-crop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
