k8s/service.yml
apiVersion: v1
kind: Service  
metadata:
  name: face-crop-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: face-crop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
